@@ -105,7 +105,8 @@ enum fuse_opcode {
 	FUSE_FSYNCDIR      = 30,
 	FUSE_GETLK         = 31,
 	FUSE_SETLK         = 32,
-	FUSE_SETLKW        = 33
+	FUSE_SETLKW        = 33,
+	FUSE_ACCESS        = 34
 };
 
 /* Conservative buffer size for the client */
@@ -230,6 +231,11 @@ struct fuse_getxattr_out {
 
 struct fuse_lk_in_out {
 	struct fuse_file_lock lk;
+};
+
+struct fuse_access_in {
+	__u32	mask;
+	__u32	padding;
 };
 
 struct fuse_init_in_out {
