@@ -12,6 +12,9 @@
 	userspace.  For both mount options, if the option is given, then
 	the respective open flag is set, otherwise the open flag is left
 	unmodified (so the filesystem can set it).
+
+	* Add ACCESS operation.  This is called from the access() system
+	call if 'default_permissions' mount option is not given
  
 2005-07-28  Miklos Szeredi <miklos@szeredi.hu>
 
